# ComfyUI-Fooocus-V2-Expansion

./: Fooocus-ComfyUI.json  README.md  __init__.py  prompt_expansion.py  pyproject.toml
web/js/: fooocusV2Expansion.js
